compiler/test-data/parser/types/errors/asset_on_composite.frel
module types.errors.asset_on_composite

scheme User {
    name: String
}

theme BadTheme {
    primary : asset User
}
